testsuite/tests/parser/should_fail/pfail036.alan
hello() : proc
{
  foo = ( -*3);
}
