testsuite/tests/parser/should_fail/pfail036.stderr
pfail036.alan:3:12: Error: Parse error on input `*'
	Not a valid expression

